# solagent

./: .env.example  .gitignore  BASE_PAPER_AGENT_SPEC.md  CLAUDE.md  Cargo.toml  HANDOVER.md  README.md  SESSION-CONTEXT.md  SOLANA_AGENT_FIXES_SPEC.md  SPEC.md  TASK.md  TRENCH_ALPHA_AGENT_INSTRUCTIONS.md  phase0-audit-report.md  skills-lock.json
.agents/skills/gmgn-cooking/: SKILL.md
.agents/skills/gmgn-market/: SKILL.md
.agents/skills/gmgn-portfolio/: SKILL.md
.agents/skills/gmgn-swap/: SKILL.md
.agents/skills/gmgn-token/: SKILL.md
.agents/skills/gmgn-track/: SKILL.md
audit/: behavioral_intelligence_report.json
config/: default.toml  local.toml.example
crates/solagent-agent/: Cargo.toml
crates/solagent-agent/src/: auto_tuner.rs  lib.rs
crates/solagent-behavioral/: Cargo.toml
crates/solagent-behavioral/src/: layers.rs  lib.rs  report.rs  scanner.rs
crates/solagent-chain-base/: Cargo.toml
crates/solagent-chain-base/src/: lib.rs
crates/solagent-chain-solana/: Cargo.toml
crates/solagent-chain-solana/src/: lib.rs  pump_fun.rs
crates/solagent-cli/: Cargo.toml
crates/solagent-cli/src/: main.rs
crates/solagent-core/: Cargo.toml
crates/solagent-core/src/: lib.rs
crates/solagent-data/: Cargo.toml
crates/solagent-data/src/: birdeye.rs  credit_tracker.rs  dexscreener.rs  gmgn.rs  helius.rs  http.rs  jupiter.rs  lib.rs  watcher.rs  ws_watcher.rs  zerion.rs
crates/solagent-exec/: Cargo.toml
crates/solagent-exec/src/: lib.rs
crates/solagent-portfolio/: Cargo.toml
crates/solagent-portfolio/src/: db.rs  lib.rs  portfolio.rs  wallet.rs
crates/solagent-risk/: Cargo.toml
crates/solagent-risk/src/: lib.rs
crates/solagent-safety/: Cargo.toml
crates/solagent-safety/src/: lib.rs
crates/solagent-signals/: Cargo.toml
crates/solagent-signals/src/: lib.rs
scripts/: daily-report.sh  monitor.sh  run-agent.sh  seed-wallets.sh  twitter-wrapper.sh
