[package]
name = "solagent-chain-base"
version.workspace = true
edition.workspace = true

[dependencies]
solagent-core = { path = "../solagent-core" }
alloy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
