[package]
name = "solagent-chain-solana"
version.workspace = true
edition.workspace = true

[dependencies]
solagent-core = { path = "../solagent-core" }
solagent-data = { path = "../solagent-data" }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
spl-token = { workspace = true }
bs58 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
bincode = "1"
