[package]
name = "solagent-cli"
version.workspace = true
edition.workspace = true

[dependencies]
solagent-core = { path = "../solagent-core" }
solagent-agent = { path = "../solagent-agent" }
solagent-data = { path = "../solagent-data" }
solagent-portfolio = { path = "../solagent-portfolio" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
