[package]
name = "solagent-exec"
version.workspace = true
edition.workspace = true

[dependencies]
solagent-core = { path = "../solagent-core" }
solagent-chain-solana = { path = "../solagent-chain-solana" }
solagent-chain-base = { path = "../solagent-chain-base" }
solagent-data = { path = "../solagent-data" }
solagent-portfolio = { path = "../solagent-portfolio" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
bincode = "1"
solana-sdk = { workspace = true }
solana-client = { workspace = true }
helius = { workspace = true }
