[package]
name = "solagent-portfolio"
version.workspace = true
edition.workspace = true

[dependencies]
solagent-core = { path = "../solagent-core" }
solagent-risk = { path = "../solagent-risk" }
solagent-data = { path = "../solagent-data" }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
