[package]
name = "solagent-safety"
version.workspace = true
edition.workspace = true

[dependencies]
solagent-core = { path = "../solagent-core" }
solagent-data = { path = "../solagent-data" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
